Adding Torus changes since workspace mode #54032

Closed
opened 2018-02-08 21:40:48 +01:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 345c6298e9
Worked: 345c6298e995e^

Short description of error
Unittest view_layer_object_add_torus fails.

Exact steps for others to reproduce the error
You will need lib/tests/layers. Poke me if you need help running the view layer unittests.

What is happening
In this unittest I call the add torus operator with an overriden view layer. However, rna_LayerObjects_active_object_update is not getting view layer from context (CTX_data_view_layer(C)). It is getting it from BKE_workspace_view_layer_get(workspace, scene);

This in turn makes the function to be called to a different view layer than the one we created the object for.

**Blender Version** Broken: 345c6298e995e Worked: 345c6298e995e^ **Short description of error** Unittest `view_layer_object_add_torus` fails. **Exact steps for others to reproduce the error** You will need lib/tests/layers. Poke me if you need help running the view layer unittests. **What is happening** In this unittest I call the add torus operator with an overriden view layer. However, `rna_LayerObjects_active_object_update` is not getting view layer from context (CTX_data_view_layer(C)). It is getting it from `BKE_workspace_view_layer_get(workspace, scene);` This in turn makes the function to be called to a different view layer than the one we created the object for.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-02-08 21:41:18 +01:00

This issue was referenced by 147c24aeeb

This issue was referenced by 147c24aeeb96a8ea5128c1593a10dc3db4ce8f7e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54032
No description provided.