Fix T54032: Adding torus test fails

rna_LayerObjects_active_object_update used wrong viewlayer.

Regression in 345c6298e99